Bug 1174452: Part 2 -- scan `nsTextNode`'s parent element for preformat in nsDocumentEncoder r=masayuki,hsivonen

This takes into account `white-space: pre` style of `nsTextNode`'s
parent element when formatting the selected text of the `nsTextNode`
node.

Differential Revision: https://phabricator.services.mozilla.com/D29159